<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.on.hsc.allin.tictactoe.GameActivity"
    tools:showIn="@layout/activity_game">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_0_0"
        android:layout_above="@+id/b_1_0"
        android:layout_alignParentStart="true"
        android:text="@string/b_0_0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_0_1"
        android:layout_above="@+id/b_1_1"
        android:layout_centerHorizontal="true"
        android:text="@string/b_0_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_0_2"
        android:layout_above="@+id/b_1_1"
        android:layout_alignParentEnd="true"
        android:text="@string/b_0_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_1_0"
        android:layout_below="@+id/b_0_1"
        android:layout_alignParentStart="true"
        android:text="@string/b_1_0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_1_1"
        android:text="@string/b_1_1"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/b_0_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_1_2"
        android:layout_below="@+id/b_0_2"
        android:layout_alignParentEnd="true"
        android:text="@string/b_1_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_2_0"
        android:layout_below="@+id/b_1_1"
        android:layout_alignParentStart="true"
        android:text="@string/b_2_0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_2_1"
        android:layout_below="@+id/b_1_1"
        android:layout_centerHorizontal="true"
        android:text="@string/b_2_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/b_2_2"
        android:layout_below="@+id/b_1_2"
        android:layout_alignParentEnd="true"
        android:text="@string/b_2_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Player Turn: "
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp" />
</RelativeLayout>
